force-app/main/default/objects/PortfolioHolding__c/PortfolioHolding__c.object-meta.xml
<CustomObject>
    <label>Portfolio Holding</label>
    <pluralLabel>Portfolio Holdings</pluralLabel>
    <nameField>
        <label>Portfolio Holding Name</label>
        <type>AutoNumber</type>
        <displayFormat>PH-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual security or asset holding within a financial account.</description>
</CustomObject>