force-app/main/default/objects/PortfolioHolding__c/fields/AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AsOfDate__c</fullName>
    <label>As Of Date</label>
    <description>Date of last valuation</description>
    <type>Date</type>
</CustomField>