force-app/main/default/objects/PortfolioHolding__c/fields/AssetClass__c.field-meta.xml
<CustomField>
    <fullName>AssetClass__c</fullName>
    <label>Asset Class</label>
    <description>Broad asset classification</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equity - US</fullName>
                <default>true</default>
                <label>Equity - US</label>
            </value>
            <value>
                <fullName>Equity - International</fullName>
            </value>
            <value>
                <fullName>Fixed Income - Government</fullName>
            </value>
            <value>
                <fullName>Fixed Income - Corporate</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Equivalents</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Alternative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>