force-app/main/default/objects/PortfolioHolding__c/fields/CurrentAllocationPct__c.field-meta.xml
<CustomField>
    <fullName>CurrentAllocationPct__c</fullName>
    <label>Current Allocation %</label>
    <description>% of total account value</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>