force-app/main/default/objects/PortfolioHolding__c/fields/FinancialAccountId__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccountId__c</fullName>
    <label>Financial Account</label>
    <description>Parent financial account (Master-Detail)</description>
    <type>MasterDetail</type>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipName>PortfolioHoldings</relationshipName>
    <relationshipLabel>Portfolio Holdings</relationshipLabel>
</CustomField>