force-app/main/default/objects/PortfolioHolding__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <description>Number of units/shares held</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
    <required>true</required>
</CustomField>