force-app/main/default/objects/PortfolioHolding__c/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <label>Ticker</label>
    <description>Stock/fund ticker symbol (e.g. AAPL, SPY)</description>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
</CustomField>