force-app/main/default/objects/PortfolioHolding__c/listViews/My_Holdings.listView-meta.xml
<ListView>
    <fullName>My_Holdings</fullName>
    <label>My Portfolio Holdings</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Ticker__c</columns>
    <columns>AssetClass__c</columns>
    <columns>Quantity__c</columns>
    <columns>CurrentValue__c</columns>
    <columns>CurrentAllocationPct__c</columns>
    <columns>AsOfDate__c</columns>
    <columns>FinancialAccountId__c</columns>
</ListView>